# tdd_chat_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose-app.yaml  docker-compose-dev.yaml  poetry.toml  pyproject.toml
scripts/: build-docker.sh  clean.sh  docker-entrypoint.sh  format.sh  lint.sh  mypy-precommit.sh
tdd_chat_app/: __main__.py  chat_client.py  communication_server.py  irepo.py  repo_impl.py
tests/acceptence/: test_chat_acceptence.py
tests/unit/: test_chat_client.py  test_connection.py
